Fixed image uploading and input validation in product add/edit, truncating/wrapping too long texts

--- a/app/static/ostoskeskus.css
+++ b/app/static/ostoskeskus.css
@@ -61,18 +61,19 @@ header > h1 {
     width: 100%;
     margin-top: 10px;
     margin-bottom: 10px;
+    justify-content: space-between;
 }
 .column {
     flex: 1 1 20%;
-    margin: 10px;
     padding: 10px 10px 10px 10px;
     background-color: #453cc7;
     box-sizing: border-box;
-    border-radius: 10px; 
-    /* Need to think if I want to enable drop shadows across the app
-    overflow: hidden;
-    box-shadow: 0px 1px 12px rgba(0, 0, 0, 0.5);
-    */
+    border-radius: 10px;
+    max-width: 24%;
+    overflow-wrap: break-word;
+    word-break: normal;
+    white-space: normal;
+    box-sizing: border-box;
 }
 .category {
     color: #ffffff;
@@ -190,6 +191,7 @@ header > h1 {
     width: 960px;
     gap: 20px;
     margin: 0 auto;
+    justify-content: space-between;
 }
 .listing {
     border-radius: 10px;
@@ -199,6 +201,11 @@ header > h1 {
     background-color: #453cc7;
     font-size: 30px;
     text-align: center;
+    overflow-wrap: break-word;
+    word-break: break-word;
+    white-space: normal;
+    max-width: 100%;
+    width: 100%;
 }
 .image img {
     border-radius: 10px;
